# xten-cli

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish-test.yml
xten/: cli.py
xten/commands/: compress.py  info.py  trim.py
xten/services/: ffmpeg_service.py
xten/utils/: console.py
