[project]
name = "xten-cli"
version = "0.1.0"
description = "Local-first media utility CLI"
authors = [{ name = "Jonathan Turner" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer[all]",
    "rich"
]

[project.scripts]
xten = "xten.cli:app"

[tool.setuptools.packages.find]
include = ["xten*"]

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"
